--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,4 +78,6 @@ footer .social { margin-bottom: 1.5rem; }
 
 @media (prefers-reduced-motion: no-preference) {
     html { scroll-behavior: smooth; }
+    body.transition { transition: background 0.5s, color 0.5s; }
+    .colour-scheme-switch svg { transition: fill 0.5s; }
 }
